--- a/backend_ctrl_store/backend_usuario_gametech-main/bin/main/application.properties
+++ b/backend_ctrl_store/backend_usuario_gametech-main/bin/main/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=test
-server.port=8082
+server.port=8080
 
 # ORACLE DB
 # spring.datasource.driver-class-name=oracle.jdbc.OracleDriver
@@ -9,9 +9,9 @@ server.port=8082
 
 # NEON DB
 # spring.datasource.url=jdbc:postgresql://localhost:5432/<YOUR_DATABASE_NAME>
-spring.datasource.url=jdbc:postgresql://ep-cold-hall-a4pk11ji-pooler.us-east-1.aws.neon.tech:5432/Print3D?sslmode=require
-spring.datasource.username=Print3D_owner
-spring.datasource.password=npg_a0jkmDxG1Chu
+spring.datasource.url=jdbc:postgresql://ep-sparkling-star-a4ijzcya-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_bNXDrtRL07fi
 
 # ORACLE DB
 # spring.jpa.hibernate.ddl-auto=<create | create-drop | update | validate | none>
