--- a/backend_ctrl_store/backend_inventario_gametech1-main/src/main/resources/application.properties
+++ b/backend_ctrl_store/backend_inventario_gametech1-main/src/main/resources/application.properties
@@ -9,9 +9,9 @@ server.port=8081
 
 # NEON DB
 # spring.datasource.url=jdbc:postgresql://localhost:5432/<YOUR_DATABASE_NAME>
-spring.datasource.url=jdbc:postgresql://ep-cold-hall-a4pk11ji-pooler.us-east-1.aws.neon.tech:5432/Print3D?sslmode=require
-spring.datasource.username=Print3D_owner
-spring.datasource.password=npg_a0jkmDxG1Chu
+spring.datasource.url=jdbc:postgresql://ep-sparkling-star-a4ijzcya-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
+spring.datasource.username=neondb_owner
+spring.datasource.password=npg_bNXDrtRL07fi
 
 # ORACLE DB
 # spring.jpa.hibernate.ddl-auto=<create | create-drop | update | validate | none>
@@ -22,7 +22,7 @@ spring.datasource.password=npg_a0jkmDxG1Chu
 
 # NEON DB
 # spring.jpa.hibernate.ddl-auto=<create | create-drop | update | validate | none>
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
