--- a/backend_ctrl_store/backend_usuario_gametech-main/.env
+++ b/backend_ctrl_store/backend_usuario_gametech-main/.env
@@ -1,5 +1,5 @@
-DB_NEON_NAME=Print3D
-DB_NEON_ADMIN=Print3D_owner
-DB_NEON_PASS=npg_a0jkmDxG1Chu
-DB_NEON_HOST=ep-cold-hall-a4pk11ji-pooler.us-east-1.aws.neon.tech
+DB_NEON_NAME=neondb
+DB_NEON_ADMIN=neondb_owner
+DB_NEON_PASS=ep-sparkling-star-a4ijzcya-pooler.us-east-1.aws.neon.tech/neondb?sslmode=require
+DB_NEON_HOST=npg_bNXDrtRL07fi
 DB_NEON_PORT=5432
